kubepiter-api/examples/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubepiter-ingress
  namespace: kubepiter
spec:
  ingressClassName: nginx
  rules:
    - host: core-test.kubepiter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubepiter-core-service
                port:
                  number: 80
